--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
     <title>schedule</title>
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       <strong>We're sorry but schedule doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    </noscript> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
